// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > renders the Table component 1`] = `
<div>
  <div
    class="table-container"
  >
    <table
      class="table"
    />
  </div>
  <!--&lt;Table&gt;-->
</div>
`;

exports[`Table > renders the TableBody component 1`] = `
<div>
  <tbody
    class="table__body"
  />
  <!--&lt;TableBody&gt;-->
</div>
`;

exports[`Table > renders the TableCell component 1`] = `
<div>
  <td
    class="table__data-cell"
  />
  
  <!--&lt;TableCell&gt;-->
</div>
`;

exports[`Table > renders the TableCell component as a head cell 1`] = `
<div>
  <th
    class="table__header-cell"
  />
  
  <!--&lt;TableCell&gt;-->
</div>
`;

exports[`Table > renders the TableHead component 1`] = `
<div>
  <thead
    class="table__head"
  />
  <!--&lt;TableHead&gt;-->
</div>
`;

exports[`Table > renders the TableRow component 1`] = `
<div>
  <tr
    class="table__row"
  />
  <!--&lt;TableRow&gt;-->
</div>
`;
